fixed navbar alignment. Dropdown content is messed up now

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -13,10 +13,10 @@ body {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 25px 16px;
   text-decoration: none;
-  font-size: 20px;
-  height: 20px;
+  font-size: 22px;
+  height: 25px;
 }
 
 .logo {
@@ -25,36 +25,23 @@ body {
 }
 .dropdown {
   float: left;
+  position: relative;
   overflow: hidden;
-  display: inline;
+  display: inline-block;
 
 }
 
-.dropdown .dropbtn {
-  font-size: 17px; 
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
+.dropdown:hover .dropdown-content {
+    display: inline-block;
 }
 
 
-
-.navbar a:hover, .dropdown:hover .dropbtn {
+.navbar a:hover, .dropdown:hover {
   background-color: #ddd;
   color:black;
 }
 
-.headerbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  float: left;
-  background-color: inherit;
-}
+
 
 .dropdown-content {
   display: none;
@@ -66,7 +53,6 @@ body {
 }
 
 .dropdown-content a {
-  float: none;
   color: white;
   padding: 12px 16px;
   text-decoration: none;
@@ -155,6 +141,8 @@ body {
 .job-date {
   float: right;
 }
+
+
 
 
 
